cleanup commenced